--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
         android:id="@+id/imageView"
         android:layout_width="153dp"
         android:layout_height="135dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="24dp"
 
         android:src="@drawable/ic_baseline_water_nuvem_24"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,6 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -93,8 +94,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19"
-        app:layout_constraintVertical_bias="0.0"
-        >
+        app:layout_constraintVertical_bias="0.0">
 
         <TableRow>
 
@@ -105,8 +105,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:padding="10dip"
                 android:text="Hoje"
-                android:textSize="15sp"
-                />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -151,20 +150,19 @@
                 android:id="@+id/textView10"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
-                android:text="23°"
-                android:textColor="#001F70"
-                android:textAlignment="center"
                 android:fontFamily="@font/poppins_semibold"
-                />
+                android:text="23°"
+                android:textAlignment="center"
+                android:textColor="#001F70" />
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="31°"
-                android:textColor="#BB0808"
                 android:textAlignment="center"
-                android:fontFamily="@font/poppins_semibold"/>
+                android:textColor="#BB0808" />
         </TableRow>
 
         <TableRow>
@@ -221,25 +219,43 @@
                 android:id="@+id/textView17"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
-                android:text="21°"
-                android:textColor="#001F70"
-                android:textAlignment="center"
                 android:fontFamily="@font/poppins_semibold"
-                />
+                android:text="21°"
+                android:textAlignment="center"
+                android:textColor="#001F70" />
 
             <TextView
                 android:id="@+id/textView18"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="33°"
-                android:textColor="#BB0808"
                 android:textAlignment="center"
-                android:fontFamily="@font/poppins_semibold"/>
+                android:textColor="#BB0808" />
         </TableRow>
 
 
-
     </TableLayout>
+
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Selecione outra Região"
+        android:fontFamily="@font/poppins_semibold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_mylocation"
+        app:layout_constraintStart_toEndOf="@+id/textView26"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
