--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,21 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.apacaalerta.ui.dashboard.DashboardFragment"
+        android:name="com.example.apacaalerta.ui.dashboard.AlertaFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_alerta" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.apacaalerta.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+    android:id="@+id/navigation_notifications"
+    android:name="com.example.apacaalerta.ui.notifications.NotificationsFragment"
+    android:label="@string/title_notifications"
+    tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/navigation_mares"
+        android:name="com.example.apacaalerta.MaresFragment"
+        android:label="@string/title_mares"
+        tools:layout="@layout/fragment_mares" />
+
+
 </navigation>
